# mcp-cli

./: Cargo.toml  README.md
.zed/: debug.json
src/: cli.rs  client_handler.rs  format.rs  lib.rs  main.rs  repl.rs  session.rs  shell.rs  shell_types.rs  transport.rs
tests/: session_integration.rs
