[package]
name = "mcp-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "mcp_cli"
path = "src/lib.rs"

[[bin]]
name = "mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
http = "1.4.0"
nu-ansi-term = "0.50.3"
reedline = "0.48.0"
reqwest = { version = "0.13.4", default-features = false }
rmcp = { version = "1.8.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
rmcp = { version = "1.8.0", default-features = false, features = ["client", "server", "transport-async-rw"] }
